# argus

./: .codespellrc  .gitignore  404.html  Cargo.toml  LICENSE  Makefile.toml  README.md  flake.nix  index.html  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  toc.html  toc.js  trait-debugging-101.html  typestate.html
.github/workflows/: book.yml  ci.yml  merge.yml  release.yml
.github/workflows/setup/: action.yml
book/: .gitignore  book.toml  flake.nix
book/src/: SUMMARY.md  debug-media.md  trait-debugging-101.md  typestate.md  whirlwind.md
crates/argus/: Cargo.toml
crates/argus-cli/: Cargo.toml
crates/argus-cli/src/: lib.rs  plugin.rs
crates/argus-cli/tests/: test_examples.rs
crates/argus-cli/tests/workspaces/axum/src/: main.rs
crates/argus-cli/tests/workspaces/axum/src/tests/: extract_self_mut.rs  extract_self_ref.rs  generics.rs  multiple_body_extractors.rs  multiple_paths.rs  not_a_function.rs  not_async.rs  not_send.rs  request_not_last.rs  too_many_extractors.rs  wrong_return_type.rs
crates/argus-cli/tests/workspaces/bevy/: Cargo.toml
crates/argus-cli/tests/workspaces/bevy/src/: main.rs
crates/argus-cli/tests/workspaces/chumsky/: Cargo.toml
crates/argus-cli/tests/workspaces/diesel/: Cargo.toml
crates/argus-cli/tests/workspaces/diesel/src/: bad_insertable_field.rs  bad_sql_query.rs  invalid_query.rs  invalid_select.rs  main.rs  queryable_order_mismatch.rs
crates/argus-cli/tests/workspaces/easy_ml/: Cargo.toml
crates/argus-cli/tests/workspaces/easy_ml/src/: main.rs  recursion.rs
crates/argus-cli/tests/workspaces/nalgebra/src/: main.rs  mat_mul.rs
crates/argus-cli/tests/workspaces/uom/: Cargo.toml
crates/argus-cli/tests/workspaces/uom/src/: main.rs  type_mismatch.rs
crates/argus-ext/: Cargo.toml
crates/argus-ext/src/: hash.rs  infer.rs  iter.rs  lib.rs  ty.rs  utils.rs
crates/argus-ext/src/rustc/: fn_ctx.rs  mod.rs
crates/argus-ext/src/ty/: impl.rs
crates/argus-ser/: Cargo.toml
crates/argus-ser-macros/: Cargo.toml
crates/argus-ser-macros/src/: lib.rs  utils.rs
crates/argus-ser/src/: argus.rs  const.rs  custom.rs  dyn.rs  interner.rs  lib.rs  safe.rs  term.rs  ty.rs
crates/argus-ser/src/hir/: mod.rs  types.ts
crates/argus-ser/src/path/: default.rs  mod.rs  pretty.rs
crates/argus/bindings/: Node.ts  Obligation.ts  SerializedTree.ts  TreeTopology.ts
crates/argus/src/: analysis.rs  emitter.rs  ext.rs  find_bodies.rs  lib.rs  test_utils.rs  tls.rs  ts.rs  types.rs
crates/argus/src/aadebug/: dnf.rs  mod.rs  tree.rs  ty.rs
crates/argus/src/analysis/: ambiguous.rs  bounds.rs  entry.rs  hir.rs  mod.rs  tls.rs  transform.rs
crates/argus/src/proof_tree/: ext.rs  format.rs  interners.rs  macros.rs  mod.rs  pretty.rs  serialize.rs  topology.rs  visitor.rs
crates/argus/src/rustc/: fn_ctx.rs  mod.rs
crates/argus/src/serialize/: compound.rs  const.rs  json.rs  mod.rs  path.rs  term.rs  ty.rs
crates/argus/src/serialize/hir/: mod.rs
crates/argus/src/serialize/path/: default.rs  mod.rs  pretty.rs
crates/argus/src/ty/: const.rs  mod.rs  my_ty.rs  path.rs  term.rs
crates/argus/tests/: obligations.rs  stabililty.rs
crates/argus/tests/contained/: ast-visit-overflow.test  bevy-system-simplified.test  into-string.test  missing-marker.test
crates/argus_cli/: Cargo.toml
crates/argus_cli/src/: lib.rs  plugin.rs
crates/argus_cli/tests/: test_examples.rs
crates/argus_cli/tests/workspaces/axum/: Cargo.toml
crates/argus_cli/tests/workspaces/axum/src/tests/: argument_not_extractor.rs  extract_self_mut.rs  extract_self_ref.rs  generics.rs  invalid_attrs.rs  missing_deserialize.rs  mod.rs  multiple_body_extractors.rs  multiple_paths.rs  not_a_function.rs  not_async.rs  not_send.rs  request_not_last.rs  too_many_extractors.rs  wrong_return_type.rs
crates/argus_cli/tests/workspaces/bevy/: Cargo.toml
crates/argus_cli/tests/workspaces/chumsky/: Cargo.toml
crates/argus_cli/tests/workspaces/chumsky/src/: json.rs  main.rs
crates/argus_cli/tests/workspaces/diesel/: Cargo.toml
crates/argus_cli/tests/workspaces/diesel/src/: bad_insertable_field.rs  bad_sql_query.rs  invalid_query.rs  main.rs  overflow.rs
crates/argus_cli/tests/workspaces/easy_ml/src/: recursion.rs
crates/argus_cli/tests/workspaces/entrait/: Cargo.toml
crates/argus_cli/tests/workspaces/entrait/src/: main.rs  missing_impl_deep.rs
crates/argus_cli/tests/workspaces/nalgebra/: Cargo.toml
crates/argus_cli/tests/workspaces/nalgebra/src/: mat_mul.rs  mat_mul_explicit.rs
crates/argus_cli/tests/workspaces/uom/src/: type_mismatch.rs
examples/bad-select/: .rustfmt.toml  Cargo.toml
examples/bad-select/src/: main.rs
examples/bevy/: Cargo.toml
examples/bevy/src/: main.rs
examples/hello-server/: Cargo.toml
examples/hello-server/src/: main.rs
examples/media/: Cargo.toml
examples/media/src/: main.rs  media.rs
ide/: .gitignore  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  typedoc.json
notes/: notes.org  prompt.txt  system.txt
samples/: .gitignore
samples/haskell/into-string/: Makefile  into_string.hs
samples/haskell/orphans/: A.hs  B.hs  C.hs  D.hs  Makefile  orphan
samples/swift/bevy-simplified/: bevy_simplified.swift
samples/swift/into-string/: into_string.swift
samples/swift/orphans/: Makefile  Package.swift
samples/swift/orphans/Sources/: A.swift  B.swift  C.swift  Orphans.swift
scripts/: evaluation.scm  guile-wrapper.sh  ts-rs.scm
