[package]
name = "argus-cli"
version = "0.1.6"
edition = "2021"
authors = ["Gavin Gray <gavinleroy6@gmail.com>"]
repository = "https://github.com/cognitive-engineering-lab/argus"
description = "Trait debugger backend for IDE interactions."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argus-lib = { version = "0.1.6", path = "../argus" }
rustc_plugin = "=0.10.0-nightly-2024-05-20"
rustc_utils.workspace = true
log.workspace = true
anyhow.workspace = true
fluid-let.workspace = true
serde.workspace = true
serde_json.workspace = true

env_logger = { version = "0.9", default-features = false }
clap = { version = "3.1", default-features = false, features = ["std", "derive"] }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
# See https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
