[package]
name = "argus"
version = "0.0.1"
edition = "2021"

[features]
testing = []

[dependencies]
rustc_utils = { version = "=0.7.4-nightly-2023-08-25", features = ["serde", "ts-rs"] }

log = "0.4"
index_vec = { version = "0.1.3", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
smallvec = "1.11.2"
ts-rs = { version = "6.2.0", features = [
    "rustc-hash-impl",
    "index-vec-impl"
] }
anyhow = "1.0.75"
fluid-let = "1.0.0"
itertools = "0.12.0"
serde_json = "1.0.108"
serde_as = "0.0.1"
serde_with = "3.5.1"

# testing utils
lazy_static = { version = "1.4" }

[dev-dependencies]
argus = { path = ".", features = ["testing"] }
test-log = "0.2.11"
env_logger = "0.9.3"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
# See https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
