[package]
name = "argus-lib"
version = "0.1.11"
edition = "2021"
authors = ["Gavin Gray <gavinleroy6@gmail.com>"]
repository = "https://github.com/cognitive-engineering-lab/argus"
description = "Trait debugger analysis for IDE interactions."
license = "MIT"

[features]
testing = ["lazy_static", "ts-rs"]

[lib]
doctest = false

[dependencies]
rustc_utils.workspace = true
log.workspace = true
anyhow.workspace = true
fluid-let.workspace = true
serde.workspace = true
serde_json.workspace = true

argus-ext = { version = "0.1.11", path = "../argus-ext" }
argus-ser = { version = "0.1.11", path = "../argus-ser" }
index_vec = { version = "0.1.3", features = ["serde"] }
smallvec = "1.11.2"
itertools = "0.12.0"
indexmap = { version = "2.2", features = ["serde"] }
uuid = { version =  "1.7.0", features = ["v4", "fast-rng", "serde"]}

# testing utils
lazy_static = { version = "1.4", optional = true }
ts-rs = { version = "7.1.1", features = ["indexmap-impl"], optional = true }

[dev-dependencies]
argus-lib = { path = ".", features = ["testing"] }
argus-ser = { version = "0.1.11", path = "../argus-ser", features = ["testing"] }
rustc_utils = { version = "=0.10.0-nightly-2024-05-20", features = ["serde", "ts-rs"] }
test-log = "0.2.11"
env_logger = "0.9.3"
text-diff = "0.4"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
# See https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
