[package]
name = "argus_cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argus = { path = "../argus" }

rustc_plugin = "=0.9.0-nightly-2024-01-24"
rustc_utils = { version = "=0.9.0-nightly-2024-01-24", features = ["serde"] }

# For binaries
log = "0.4"
env_logger = {version = "0.9", default-features = false}
clap = {version = "3.1", default-features = false, features = ["std", "derive"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.75"
fluid-let = "1.0.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
# See https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
